--- a/style/geostyle.css
+++ b/style/geostyle.css
@@ -14,6 +14,16 @@
     /*remove this to enable scroll*/
     /*overflow: auto;*/
 }
+
+html {
+    overflow: hidden;
+}
+
+* {
+touch-action: manipulation;
+}
+
+
        body {
     display: block;
     margin: 0px;
