--- a/style/guidef.css
+++ b/style/guidef.css
@@ -91,8 +91,9 @@ transform: translateZ(0);*/
   .dg li {
     opacity:1;
     box-sizing: border-box !important;
-    transition: all 0.3s linear;
-    /*transform:scaleY(1);*/
+    transform:scaleY(1);
+    transition: max-height 0.3s ease,min-height 0.3s ease, height 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
+    
   }
 
   @keyframes overf {
@@ -104,7 +105,7 @@ transform: translateZ(0);*/
   .dg .closed ul li,
   .dg .closed ul li > * {
 
-    /*transform:scaleY(0.2);*/
+    transform:scaleY(0);
 
     max-height: 0;
     min-height: 0;
@@ -112,8 +113,9 @@ transform: translateZ(0);*/
     /*overflow: hidden;*/
     border: 0;
     opacity:0;
-    transition:
-        all 0.5s ease;
+    transition: 
+        max-height 0.5s ease,min-height 0.5s ease, height 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
+        /*all 0.5s;*/
    /*animation-name: overf;
    animation-duration: 0.9s;*/
 
