--- a/style/guidef.css
+++ b/style/guidef.css
@@ -91,8 +91,8 @@ transform: translateZ(0);*/
   .dg li {
     opacity:1;
     box-sizing: border-box !important;
-    transform:scaleY(1);
-    transition: max-height 0.3s ease,min-height 0.3s ease, height 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
+    /*transform:scaleY(1);*/
+    transition: max-height 0.3s ease,min-height 0.3s ease, height 0.3s ease, opacity 0.3s ease;
     
   }
 
@@ -105,7 +105,7 @@ transform: translateZ(0);*/
   .dg .closed ul li,
   .dg .closed ul li > * {
 
-    transform:scaleY(0);
+    /*transform:scaleY(0);*/
 
     max-height: 0;
     min-height: 0;
@@ -114,7 +114,7 @@ transform: translateZ(0);*/
     border: 0;
     opacity:0;
     transition: 
-        max-height 0.5s ease,min-height 0.5s ease, height 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
+        max-height 0.3s ease,min-height 0.3s ease, height 0.3s ease, opacity 0.3s ease;
         /*all 0.5s;*/
    /*animation-name: overf;
    animation-duration: 0.9s;*/
